# terraform-rust-aws-lambda

./: .gitignore  README.md  lambda.tf
lambda/: Cargo.toml  aws.Dockerfile  build-for-aws.sh  build-test.ps1
lambda/events/: send-event.json
lambda/src/: main.rs  secrets.rs
