[package]
name = "thanks_async_lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde_json = "1.0.74"
tokio = "1.15.0"
log = "0.4.14"
simple_logger = "1.16.0"
serde = "1.0.133"
aws-config = "0.3.0"
aws-sdk-secretsmanager = "0.3.0"
aws-sdk-dynamodb = "0.3.0"
piet-svg = "0.5.0"
